# sanctioncheck

./: .gitignore  LICENSE  README.md  pyproject.toml
sanctioncheck/: __init__.py  cache.py  cli.py  config.py  matcher.py  models.py
sanctioncheck/data/: dgt_fallback.json
sanctioncheck/sources/: __init__.py  base.py  dgt.py  eu.py  ofac.py  un.py
