[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctioncheck"
version = "0.1.0"
description = "CLI screening tool for international sanctions lists (EU, UN, OFAC, DGT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "twux-sec" }]
keywords = ["osint", "sanctions", "aml", "compliance", "ofac", "screening", "kyc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    "rapidfuzz>=3.6",
    "rich>=13.7",
    "lxml>=5.0",
    "platformdirs>=4.0",
]

[project.scripts]
sanctioncheck = "sanctioncheck.cli:app"

[project.urls]
Homepage = "https://github.com/twux-sec/sanctioncheck"

[tool.setuptools.packages.find]
include = ["sanctioncheck*"]

[tool.setuptools.package-data]
sanctioncheck = ["data/*.json", "data/*.xml"]
